--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,70 @@
+/* html, body, #app, #app>div {
+  height: 100%;
+} */
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+/*
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 2rem;
-  text-align: center;
+}
+*/
+/*
+.flex-1 {
+  height: 100%;
+}
+*/
+
+/* .content {
+  flex: 1;
+  width: 100%;
+} */
+
+/* .home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100vh;
 }
 
-.logo {
-  height: 6em;
+*/
+
+/*
+.home-image {
+  max-width: 100%;
+  height: auto;
+} */
+
+
+/* .logo {
+  max-width: 100%;
+  height: auto;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
-.logo:hover {
+} */
+
+/* .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
-}
+} */
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -31,12 +77,15 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
 
 .card {
   padding: 2em;
+  width: 100%;
+  max-width: 800px; /* Adjust max-width as needed */
+  margin: 0 auto; /* Center the card horizontally */
 }
 
-.read-the-docs {
+/* .read-the-docs {
   color: #888;
-}
+} */
