--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-/* html, body, #app, #app>div {
+html, body {
+  width: 100%;
   height: 100%;
-} */
+}
 
 .App {
   display: flex;
@@ -9,83 +10,3 @@
   justify-content: space-between;
   min-height: 100vh;
 }
-/*
-#root {
-  height: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-}
-*/
-/*
-.flex-1 {
-  height: 100%;
-}
-*/
-
-/* .content {
-  flex: 1;
-  width: 100%;
-} */
-
-/* .home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 100vh;
-}
-
-*/
-
-/*
-.home-image {
-  max-width: 100%;
-  height: auto;
-} */
-
-
-/* .logo {
-  max-width: 100%;
-  height: auto;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-} */
-
-/* .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-} */
-
-/* @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
-
-.card {
-  padding: 2em;
-  width: 100%;
-  max-width: 800px; /* Adjust max-width as needed */
-  margin: 0 auto; /* Center the card horizontally */
-}
-
-/* .read-the-docs {
-  color: #888;
-} */
